--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.7.2",
     "sirv-cli": "^2.0.0",
     "sveltestrap": "^5.7.0"
   }
